# because

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  file::memory:  pyproject.toml
because/: __init__.py  buffer.py  cli.py  dashboard.py  enrichment.py  explainer.py  pytest_plugin.py
because/instruments/: grpc.py  httpx.py  logging.py  redis.py  requests.py  socket.py  sqlalchemy.py
because/integrations/: datadog.py  django.py  fastapi.py  flask.py  logging.py  otel.py  sentry.py  serialize.py
because/patterns/: __init__.py  base.py  pool_exhaustion.py  retry_storm.py  silent_failure.py
examples/: llm_explainer.py  pool_exhaustion.py  retry_storm.py  silent_failure.py
tests/: test_buffer.py  test_cli.py  test_create_task.py  test_dashboard.py  test_django_integration.py  test_enrichment.py  test_explainer.py  test_gather.py  test_grpc.py  test_httpx_instrument.py  test_integrations.py  test_observability_integrations.py  test_otel.py  test_patterns.py  test_patterns_hypothesis.py  test_pytest_plugin.py  test_redis_instrument.py  test_requests_instrument.py  test_retry_storm_and_logging.py  test_socket.py  test_sqlalchemy_instrument.py  test_time_window_and_http_pool.py  test_watch.py
