[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "because"
version = "0.1.0"
description = "Enriches exceptions with plain-English causal chains at throw time"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=1.4"]
requests = ["requests>=2.0"]
httpx = ["httpx>=0.23"]
redis = ["redis>=4.0"]
fastapi = ["fastapi>=0.95"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "sqlalchemy>=1.4",
    "requests>=2.0",
    "httpx>=0.23",
    "fakeredis>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
