[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "because-py"
version = "0.1.0"
description = "Enriches exceptions with plain-English causal chains at throw time"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jacob Wagner", email = "jacobthomasmichael@gmail.com" }]
keywords = ["exceptions", "debugging", "observability", "error-context", "root-cause"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jacobthomasmichael/because"
Repository = "https://github.com/jacobthomasmichael/because"
"Bug Tracker" = "https://github.com/jacobthomasmichael/because/issues"

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=1.4"]
requests = ["requests>=2.0"]
httpx = ["httpx>=0.23"]
redis = ["redis>=4.0"]
fastapi = ["fastapi>=0.95", "starlette>=0.27"]
flask = ["flask>=3.0"]
all = [
    "sqlalchemy>=1.4",
    "requests>=2.0",
    "httpx>=0.23",
    "redis>=4.0",
    "fastapi>=0.95",
    "starlette>=0.27",
    "flask>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "sqlalchemy>=1.4",
    "requests>=2.0",
    "httpx>=0.23",
    "fakeredis>=2.0",
    "flask>=3.0",
    "fastapi>=0.95",
    "starlette>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["because"]
